--- a/nlw-start/server/package.json
+++ b/nlw-start/server/package.json
@@ -15,7 +15,11 @@
     "@prisma/client": "^4.8.1",
     "fastify": "^4.11.0"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "prisma": "^4.8.1",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
