--- a/nlw-spacetime/web/package.json
+++ b/nlw-spacetime/web/package.json
@@ -14,7 +14,6 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.216.0",
@@ -27,6 +26,8 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "eslint": "^8.41.0",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
