--- a/nlw-spacetime/mobile/package.json
+++ b/nlw-spacetime/mobile/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --clear",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "npm run lint --fix"
   },
   "dependencies": {
     "@expo-google-fonts/bai-jamjuree": "^0.2.3",
