--- a/nlw-spacetime/mobile/package.json
+++ b/nlw-spacetime/mobile/package.json
@@ -16,11 +16,13 @@
     "@types/react": "~18.0.27",
     "@types/react-native": "~0.69.1",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
     "expo": "^48.0.0",
     "expo-auth-session": "~4.0.3",
     "expo-constants": "~14.2.1",
     "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-random": "~13.1.1",
     "expo-router": "^1.5.3",
@@ -34,8 +36,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.11",
-    "typescript": "^4.9.4",
-    "expo-image-picker": "~14.1.1"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
