--- a/nlw-ia/api/package.json
+++ b/nlw-ia/api/package.json
@@ -8,8 +8,10 @@
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "prisma": "^5.2.0",
     "tsx": "^3.12.9",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@prisma/client": "^5.2.0"
   },
   "dependencies": {
     "fastify": "^4.23.0"
