--- a/nlw-ia/api/package.json
+++ b/nlw-ia/api/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "@fastify/multipart": "^7.7.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.0",
